# tinylisp

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt
lisp/: stdlib.tl
src/: lenv.c  lenv.h  lisp_func.c  lisp_func.h  lmath.c  lmath.h  lobj.c  lobj.h  main.c  map.c  map.h  mpool.c  mpool.h  qexpr.c  qexpr.h  tl.c  tl.h
test/: fib.tl  mem-leak.c
